--- a/front/public/css/board/boardList.css
+++ b/front/public/css/board/boardList.css
@@ -16,7 +16,7 @@ article {
     font-size: 1.7rem;
     margin-top: 10rem;
     float: left;
-    width: 15%;
+    min-width: 15%;
     height: 100%;
 }
 
