--- a/front/views/user/login.html
+++ b/front/views/user/login.html
@@ -23,14 +23,10 @@
                                 <input type="text" name="userid" />
                                 <input type="password" name="userpw" />
                                 <button type="submit">로그인</button>
-
                             </form>
                             <div id="loginApi">
-                                <a href="#">
+                                <a href="/kakao/login">
                                     <img src="/img/loginKakao.png" />
-                                    <div>
-                                        카카오 로그인
-                                    </div>
                                 </a>
                             </div>
                         </div>
